# ai_girlfried

./: app.py  pyproject.toml
.res/: voices.json
chats/: girl_friend.py  settings.py
static/: styles.css
templates/: index.html
